--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.11.10
 aiosignal==1.3.1
 altair==4.2.2
-analytics-python==1.4.post1
+analytics-python
 annotated-types==0.7.0
 anyio==4.7.0
 anywidget==0.9.13
