--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+absl-py==2.2.2
+adjustText==1.3.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.10
 aiosignal==1.3.1
 altair==4.2.2
-analytics-python
+altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.7.0
 anywidget==0.9.13
@@ -13,28 +15,39 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 astor==0.8.1
 asttokens==2.4.1
+astunparse==1.6.3
 async-lru==2.0.4
 attrs==24.2.0
 autopage==0.5.2
 babel==2.16.0
+backoff==2.2.1
 beautifulsoup4==4.12.3
 bidict==0.23.1
+bigtree==0.23.0
+bioframe==0.8.0
 bleach==6.2.0
 blinker==1.9.0
+bottle==0.13.3
 Brotli==1.1.0
+cabarchive==0.2.4
+caches==3.0.0
 cachetools==5.5.0
 certifi==2024.12.14
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.0
+checkbox_tree==0.0.1
 click==8.1.7
 cliff==4.8.0
+clr_loader==0.2.7.post0
 cmd2==2.5.8
 colorama==0.4.6
+colorcet==3.1.0
 comm==0.2.2
 contourpy==1.3.0
 cryptography==44.0.0
-cx_Freeze==7.2.5
+cvxopt==1.3.2
+cx_Freeze==8.1.0
 cx_Logging==3.2.1
 cycler==0.12.1
 dash==2.18.2
@@ -42,38 +55,52 @@ dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+dash_ag_grid==31.3.0
 dash_colorscales==0.0.4
 dash_daq==0.5.0
+dataframe_with_buttons==0.0.3.0
+datashader==0.18.0
+DatastreamPy==2.0.30
+datatypes==0.19.0
 dateutils==0.6.12
 debtcollector==3.0.0
 debugpy==1.8.11
 DecisionTree==3.4.3
 decorator==5.1.1
 defusedxml==0.7.1
+deprecation==2.1.0
 df-global-search==0.1.1
+diffusers==0.32.1
 distlib==0.3.9
 django-sidebar==0.2.0
 docutils==0.21.2
 dogpile.cache==1.3.3
+dsnparse==0.2.1
 dtale==3.16.1
 duckdb==1.1.3
+efficientnet==1.0.0
 entrypoints==0.4
 et_xmlfile==2.0.0
 executing==2.1.0
 extra-streamlit-components==0.1.71
 Faker==33.1.0
 fastapi==0.115.6
+fastcluster==1.2.6
 fastjsonschema==2.21.1
 favicon==0.7.0
 filelock==3.16.1
 Flask==3.0.3
 Flask-Compress==1.17
+flatbuffers==25.2.10
 fonttools==4.54.1
 fqdn==1.5.1
 frozenlist==1.5.0
+fsspec==2024.12.0
 future==1.0.0
+gast==0.6.0
 gitdb==4.0.11
 GitPython==3.1.43
+glib==1.0.0
 google-api-core==2.23.0
 google-api-python-client==2.154.0
 google-auth==2.36.0
@@ -82,9 +109,11 @@ google-auth-oauthlib==1.2.1
 google-cloud-core==2.4.1
 google-cloud-storage==2.18.2
 google-crc32c==1.6.0
+google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
 greenlet==3.1.1
+grpcio==1.71.0
 gsheets==0.6.1
 gspread==5.12.4
 gspread-dataframe==4.0.0
@@ -92,15 +121,22 @@ gspread-formatting==1.2.0
 gspread-pandas==3.3.0
 gw_dsl_parser==0.1.49.1
 h11==0.14.0
-htbuilder==0.7.0
+h5py==3.12.1
 httpcore==1.0.7
 httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.27.0
 idna==3.10
 ifaddr==0.2.0
+igraph==0.11.8
+image-classifiers==1.0.0
+ImageHash==4.3.1
+imageio==2.36.1
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+iniconfig==2.0.0
+intervaltree==3.1.0
 ipykernel==6.29.5
 ipylab==1.0.0
 ipympl==0.9.3
@@ -112,8 +148,9 @@ isoduration==20.11.0
 itables==0.2.2
 itsdangerous==2.2.0
 jedi==0.19.1
+Jinja2==3.1.5
 jmespath==1.0.1
-joblib==1.4.2
+joblib==1.1.1
 json5==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -124,23 +161,30 @@ jupyter-lsp==2.2.5
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyter_server==2.14.2
+jupyter_server_proxy==4.4.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.3.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
+kaggle==1.6.17
 kaleido==0.2.1
 kanaries_track==0.0.5
+keras==3.9.2
+Keras-Applications==1.0.8
 keystoneauth1==5.9.1
 kiwisolver==1.4.7
+lazy_loader==0.4
+libclang==18.1.1
 lief==0.15.1
+llvmlite==0.44.0
 lxml==5.3.0
 lz4==4.3.3
 Markdown==3.7
 markdown-it-py==3.0.0
 markdown2==2.5.1
 markdownlit==0.0.7
-MarkupSafe==3.0.2
+MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
@@ -148,26 +192,41 @@ missingno==0.5.2
 mistune==3.0.2
 mitoinstaller==0.0.321
 mitosheet==0.2.6
+ml_dtypes==0.5.1
 monotonic==1.6
 more-itertools==10.5.0
 msgpack==1.1.0
 multidict==6.1.0
+multimethod==2.0
+multipledispatch==1.0.0
 mysql-connector==2.2.9
 mysql-connector-python==9.1.0
+namex==0.0.8
 narwhals==1.14.0
+natsort==8.4.0
 nbclient==0.10.1
-nbconvert==7.16.4
+nbconvert==7.16.5
 nbformat==5.10.4
+ncls==0.0.68
 nest-asyncio==1.6.0
 netaddr==1.3.0
 networkx==3.4.2
 nicegui==2.8.1
 notebook_shim==0.2.4
+numba==0.61.2
 numpy==1.26.4
+nydus==0.11.0
 oauth2client==4.1.3
 oauthlib==3.2.2
+omniplot==0.4.9
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 openstacksdk==4.2.0
+opt_einsum==3.4.0
+optional-django==0.3.0
+optree==0.15.0
 orjson==3.10.12
 os-service-types==1.7.0
 osc-lib==3.2.0
@@ -178,21 +237,33 @@ oslo.utils==8.0.0
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
+pandas-datareader==0.10.0
+pandas-profiling==3.2.0
+pandas_access==0.0.1
+pandasgui==0.2.14
 pandasql==0.7.3
 pandocfilters==1.5.1
+param==2.2.0
 parso==0.8.4
 patsy==1.0.1
 pbr==6.1.0
+pdfkit==1.0.0
+pefile==2023.2.7
+phik==0.12.4
 pillow==11.0.0
 pivottablejs==0.9.0
 platformdirs==4.3.6
 plotly==5.24.1
+plotly-events-picker==0.1.3
+plotly-express==0.4.1
+pluggy==1.5.0
 prettytable==3.12.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.48
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.28.3
+proxy_tools==0.1.0
 pscript==0.7.7
 psutil==6.1.0
 psygnal==0.11.1
@@ -201,15 +272,31 @@ pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pyct==0.5.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
+pyee==11.1.1
 Pygments==2.18.0
 pygwalker==0.4.9.13
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.3
 pymdown-extensions==10.12
+PyMySQL==1.1.1
+pynndescent==0.5.13
+pynput==1.7.7
+pyodbc==5.2.0
 pyparsing==3.2.0
 pyperclip==1.9.0
+pyppeteer==2.0.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
+PyQtWebEngine==5.15.7
+PyQtWebEngine-Qt5==5.15.2
+pyranges==0.1.4
 pyreadline3==3.5.4
+pytest==8.3.4
 python-cinderclient==9.6.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -217,10 +304,11 @@ python-dotenv==0.19.2
 python-engineio==4.10.1
 python-json-logger==3.2.1
 python-keystoneclient==5.5.0
-python-multipart==0.0.19
-python-openstackclient==7.2.1
-python-socketio==5.11.4
+python-louvain==0.16
+react==4.3.0
+redis==5.2.1
 referencing==0.35.1
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requestsexceptions==1.4.0
@@ -231,20 +319,29 @@ rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.21.0
 rsa==4.9
-scikit-learn==1.6.0
+safetensors==0.4.5
+scikit-fuzzy==0.5.0
+scikit-image==0.25.0
 scipy==1.14.1
 seaborn==0.13.2
 segment-analytics-python==2.2.3
+segment-anything==1.0
+segmentation-models==1.0.1
 Send2Trash==1.8.3
 setuptools==75.6.0
+sidetable==0.9.1
+simpervisor==1.0.0
 simple-websocket==1.1.0
 simplejson==3.19.3
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+sorted_nearest==0.0.39
+sortedcontainers==2.4.0
 soupsieve==2.6
 sql_metadata==2.15.0
 SQLAlchemy==2.0.36
+sqlalchemy-access==2.0.3
 sqlglot==25.29.0
 sqlparse==0.5.2
 squarify==0.4.4
@@ -257,13 +354,16 @@ stack-data==0.6.3
 starlette==0.41.3
 statsmodels==0.14.4
 stevedore==5.4.0
-streamlit==1.40.2
-streamlit-aggrid==1.0.5
+streamlit==1.44.0
+streamlit-aggrid==1.1.4.post1
 streamlit-aggrid-download==0.2.1
 streamlit-aggrid-pro==0.3.35
 streamlit-antd-components==0.3.2
+streamlit-autorefresh==1.0.1
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
+streamlit-charts==0.1.1
+streamlit-condition-tree==0.1.1
 streamlit-datalist==0.0.5
 streamlit-embedcode==0.1.2
 streamlit-extras==0.5.0
@@ -271,36 +371,50 @@ streamlit-faker==0.0.3
 streamlit-google-auth==1.1.8
 streamlit-image-coordinates==0.1.9
 streamlit-jdgrid==0.3.7
+streamlit-js-eval==0.1.7
 streamlit-keyup==0.2.4
+streamlit-modal==0.1.2
 streamlit-option-menu==0.4.0
+streamlit-pandas-profiling==0.1.3
+streamlit-pivottable==0.1.2
+streamlit-plotly-events==0.0.6
+streamlit-render==1.0.1
+streamlit-server-state==0.20.2
 streamlit-simple-gallery==0.0.4
 streamlit-table-select-cell==0.3.4
 streamlit-toggle-switch==1.0.2
+streamlit-tree-select==0.0.5
 streamlit-vertical-slider==2.5.5
 streamlit_book==0.7.6
 streamlit_dynamic_filters==0.1.9
 streamlit_sql==0.2.4
-strsimpy==0.2.1
-tenacity==9.0.0
+striprtf==0.0.29
 termcolor==2.5.0
 terminado==0.18.1
+text-unidecode==1.3
+texttable==1.7.0
 threadpoolctl==3.5.0
+tifffile==2024.12.12
 tinycss2==1.4.0
+tk==0.1.0
 toml==0.10.2
 toolz==1.0.0
 tornado==6.4.1
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 tzdata==2024.2
+umap-learn==0.5.7
 uri-template==1.3.0
 uritemplate==4.1.1
-urllib3==2.2.3
+urllib3==1.26.20
 uvicorn==0.32.1
 validators==0.34.0
 vbuild==0.8.2
 vega_datasets==0.2.0
 virtualenv==20.27.1
+visions==0.7.4
 wasmtime==25.0.0
 watchdog==6.0.0
 watchfiles==1.0.3
@@ -310,12 +424,15 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==14.1
 Werkzeug==3.0.6
+wheel==0.45.1
 widgetsnbextension==4.0.13
+wordcloud==1.9.4
 world-bank-data==0.1.4
 wrapt==1.17.0
 wsproto==1.2.0
 xarray==2024.11.0
 xlrd==2.0.1
+XlsxWriter==3.2.2
 yarl==1.18.3
 zipp==3.21.0
-zstandard==0.23.0
+
